fix home page header z-index

--- a/auricroad/static_source/sass/pages/_homepage.scss
+++ b/auricroad/static_source/sass/pages/_homepage.scss
@@ -14,4 +14,7 @@ body.homepage {
             @include xy-cell(10);
         }
     }
+    .desktop-nav-bar:not(.fixed):not(.video-playing) {
+        z-index: 1;
+    }
 }
